feat: Update MapLibre GL to 5.15.0
Updates MapLibre GL JS and its associated CSS and worker files to version 5.15.0. This resolves a critical issue where the map would crash due to a version mismatch between the library and its worker. Also, updates React and related dependencies to their latest versions.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fikarun-gbg",
   "private": true,
-  "version": "0.1.6",
+  "version": "0.1.7",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,9 +12,9 @@
   "dependencies": {
     "@google/genai": "^0.1.1",
     "lucide-react": "^0.344.0",
-    "maplibre-gl": "^5.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "maplibre-gl": "5.15.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
