--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fikarun-gbg",
   "private": true,
-  "version": "0.1.7",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,12 +13,13 @@
     "@google/genai": "^0.1.1",
     "lucide-react": "^0.344.0",
     "maplibre-gl": "5.15.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
